업로드 테스트용 페이지 코드 안맞는 부분 수정

--- a/src/main/resources/templates/upload-test.html
+++ b/src/main/resources/templates/upload-test.html
@@ -102,7 +102,9 @@
         try {
             const res = await fetch(uploadUrl, {
                 method: "PUT",
-                headers: {"Content-Type": file.type},
+                headers: {
+                    "Content-Type": file.type || "application/octet-stream"
+                },
                 body: file
             });
 
